--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,40 +12,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install system dependencies
-        run: |
+      - run: |
           sudo apt-get update
           sudo apt-get install -y cmake build-essential
 
-      - name: Build C library
-        run: |
-          mkdir -p build
+      - run: |
           cmake -S . -B build
           cmake --build build
 
-      - name: Bundle native library
-        run: |
+      - run: |
           mkdir -p python/usr/_lib
           cp build/libusr.so python/usr/_lib/
 
-      - name: Install build tools
-        run: |
+      - run: |
           python -m pip install --upgrade pip
           pip install build wheel setuptools
 
-      - name: Build Python package
-        working-directory: python
+      - working-directory: python
         run: python -m build
 
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+      - uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: python/dist
