--- a/python/MANIFEST.in
+++ b/python/MANIFEST.in
@@ -1,3 +1,8 @@
 include README.md
 include LICENSE
+include CMakeLists.txt
+
+recursive-include src *.c *.h
+recursive-include include *.h
+
 recursive-include usr *.so
