--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=42", "wheel", "cmake"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "usr"
-version = "0.1.2b1"
+version = "0.1.2b2"
 
 description = "Universal Systems Runtime — experimental C core with Python bindings"
 readme = "README.md"
