--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "usr"
-version = "0.1.2"
+version = "0.1.2b1"
 
 description = "Universal Systems Runtime — experimental C core with Python bindings"
 readme = "README.md"
