--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "usr"
 version = "0.1.3"
 description = "Universal Systems Runtime — C core with Python bindings"
-readme = { file = "../README.md", content-type = "text/markdown" }
+readme = { file = "README.md", content-type = "text/markdown" }
 license = "MIT"
 authors = [{ name = "Ankit Chaubey", email = "m.ankitchaubey@gmail.com" }]
 requires-python = ">=3.10"
